package com.santeConnect.repository.patient;

import com.santeConnect.domain.entities.Coordinate;
import org.springframework.data.repository.CrudRepository;

public interface CoordinateRepository extends CrudRepository<Coordinate, Long> {
}
